--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Rock, Paper, Scissors</title>
+    <title>☆ rps | homepage</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
@@ -16,7 +16,7 @@
     <div class="container text-center page-content">
       <div class="row justify-content-center">
         <div class="col-10 col-sm-8 col-md-6">
-          <header class="title mb-4">rock, paper, scissors</header>
+          <header class="title mb-4">rock, paper, scissors!</header>
 
           <main class="card-custom p-4">
             <label class="label">hello! please enter your name here:</label>
@@ -24,7 +24,7 @@
               type="text"
               id="userName"
               class="input"
-              placeholder="your name"
+              placeholder="✎ your name"
             />
             <button
               type="submit"
