styled game.html and worked on js

--- a/index.html
+++ b/index.html
@@ -48,18 +48,22 @@
             </div>
             <div class="row mt-4">
               <div class="col-6">
-                <button class="mode w-100 bestof">
+                <a href="game.html">
+                  <button class="mode w-100 bestof" id="bestOfThree">
                   <span>best of</span>
                   <br />
                   <strong>3</strong>
                 </button>
+                </a>
               </div>
               <div class="col-6">
-                <button class="mode w-100 bestof">
+                <a href="game.html">
+                <button class="mode w-100 bestof" id="bestOfFive">
                   <span>best of</span>
                   <br />
                   <strong>5</strong>
                 </button>
+                </a>
               </div>
             </div>
           </main>
