--- a/game.html
+++ b/game.html
@@ -1,29 +1,31 @@
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Play</title>
+    <title>☆ rps | homepage</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="https://use.typekit.net/wob6sfi.css" />
     <link rel="stylesheet" href="styles.css" />
   </head>
-  <body class="page">
-    <div class="container text-center">
-      <div class="row justify-content-center">
-        <div class="col-11 col-sm-9 col-md-7">
-          <header class="title my-4">rock, paper, scissors</header>
 
+  <body class="page">
+    <div class="container text-center page-content">
+      <div class="row justify-content-center">
+        <div class="col-10 col-sm-8 col-md-6">
+          <header class="title mb-4">rock, paper, scissors!</header>
           <main class="card-custom p-4">
             <div class="row mb-3">
               <div class="col-6">
                 <h6>user</h6>
-                <div class="hp">❤️ HP</div>
+                <div class="hp" id="userHealth">HP</div>
               </div>
               <div class="col-6">
                 <h6>computer</h6>
-                <div class="hp">❤️ HP</div>
+                <div class="hp" id="computerHealth">HP</div>
               </div>
             </div>
 
@@ -53,6 +55,7 @@
         </div>
       </div>
     </div>
+    <!-- Bootstrap JavaScript Libraries -->
     <script
       src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
       integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
